--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -1,9 +1,11 @@
 application: instaright
-version: 2
+version: 3
 runtime: python 
 api_version: 1
 
 handlers:
+- url: /cron
+  script: cron.py
 
 - url: /scripts
   static_dir: scripts
