--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -6,7 +6,7 @@ api_version: 1
 handlers:
 - url: /cron
   script: cron.py
-  login: admin
+#  login: admin
 
 - url: /scripts
   static_dir: scripts
