--- a/backend/cron.yaml
+++ b/backend/cron.yaml
@@ -1,4 +1,12 @@
 cron:
-- description: daily mails for users
-  url: /cron
+- description: daily stats
+  url: /cron?type=daily
   schedule: every day 00:02
+
+- description: weekly stats
+  url: /cron?type=weekly
+  schedule: every friday 00:10
+
+- description: year stats
+  url: /cron?type=year
+  schedule: 1st of january 00:30
