--- a/backend/index.yaml
+++ b/backend/index.yaml
@@ -9,3 +9,15 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+- kind: DailyDomainStats
+  properties:
+  - name: date
+  - name: count
+    direction: desc
+
+- kind: WeeklyDomainStats
+  properties:
+  - name: date
+  - name: count
+    direction: desc
