--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -34,6 +34,9 @@ handlers:
 - url: /delete_stats
   script: stat_management.py
 
+- url: /stats_task
+  script: stat_management.py
+
 - url: /.*
   script: main.py
 
