--- a/backend/cron.yaml
+++ b/backend/cron.yaml
@@ -10,3 +10,7 @@ cron:
 #- description: year stats
   #url: /cron?type=year
   #schedule: 1st of january 00:30
+
+- description: count stats
+  url: /cron?type=count
+  schedule: every day 00:30
