--- a/backend/index.yaml
+++ b/backend/index.yaml
@@ -23,6 +23,12 @@ indexes:
 
 - kind: SessionModel
   properties:
+  - name: date
+  - name: __key__
+    direction: desc
+
+- kind: SessionModel
+  properties:
   - name: instaright_account
   - name: __key__
     direction: desc
