adding sort for links

--- a/backend/index.yaml
+++ b/backend/index.yaml
@@ -44,3 +44,9 @@ indexes:
   - name: date
   - name: count
     direction: desc
+
+- kind: LinkStats
+  properties:
+  - name: date
+  - name: count
+    direction: desc
