--- a/backend/index.yaml
+++ b/backend/index.yaml
@@ -10,6 +10,11 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
+- kind: CityStats
+  properties:
+  - name: city
+  - name: count
+
 - kind: DailyDomainStats
   properties:
   - name: date
