--- a/backend/queue.yaml
+++ b/backend/queue.yaml
@@ -3,8 +3,11 @@ queue:
   rate: 1/m
   bucket_size: 1
 - name: user-info
-  rate: 5000/d
+  rate: 10000/d
   bucket_size: 1
 - name: user-consolidation
+  rate: 5/m
+  bucket_size: 1
+- name: deactivate-channels
   rate: 5/m
   bucket_size: 1
