--- a/backend/queue.yaml
+++ b/backend/queue.yaml
@@ -3,11 +3,23 @@ queue:
   rate: 1/m
   bucket_size: 1
 - name: user-info
-  rate: 10000/d
+  rate: 28000/d
   bucket_size: 1
 - name: user-consolidation
   rate: 5/m
   bucket_size: 1
+- name: data-consolidation
+  rate: 28000/d
+  bucket_size: 1
+- name: link-consolidation
+  rate: 1000/h
+  bucket_size: 1
+- name: redundant
+  rate: 1000/h
+  bucket_size: 1
 - name: deactivate-channels
   rate: 5/m
+  bucket_size: 1
+- name: twitter-follow
+  rate: 500/d
   bucket_size: 1
