--- a/backend/index.yaml
+++ b/backend/index.yaml
@@ -141,6 +141,11 @@ indexes:
   - name: date
     direction: desc
 
+- kind: StatsModel
+  properties:
+  - name: __key__
+    direction: desc
+
 - kind: UserSessionFE
   properties:
   - name: active
