--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -1,5 +1,5 @@
 application: instaright
-version: 46
+version: 47
 runtime: python 
 api_version: 1
 
@@ -8,7 +8,7 @@ handlers:
   script: cron.py
   login: admin
 
-- url: /account
+- url: /account.*
   script: account.py
 
 - url: /scripts
