--- a/backend/properties/general.ini
+++ b/backend/properties/general.ini
@@ -1,11 +1,11 @@
 [app]
 domain=http://www.instaright.com
 [facebook]
-key=
-secret=
+key=180962951948062
+secret=9ae7202531b3b813baf1bca1fcea6178
 [social]
-fb_factor=
-tw_factor=
-tw_margin=
-klout_correction=
-klout_api_key=
+fb_factor=5
+tw_factor=3
+tw_margin=500
+klout_correction=30
+klout_api_key=z9kqxgrwa5te3yuheaevyhxn
