--- a/backend/index.yaml
+++ b/backend/index.yaml
@@ -115,6 +115,12 @@ indexes:
 - kind: SessionModel
   properties:
   - name: domain
+  - name: date
+    direction: desc
+
+- kind: SessionModel
+  properties:
+  - name: domain
   - name: instaright_account
   - name: date
 
