--- a/backend/properties/badges/economy/economy.properties
+++ b/backend/properties/badges/economy/economy.properties
@@ -1,3 +1,3 @@
 [economy]
-domains=economist.com,ft.com,finance.yahoo.com,foxbusiness.com,business.nikkeibp.co.jp,online.wsj.com,finance.yahoo.com,mint.com,moneynews.com
+domains=economist.com,ft.com,finance.yahoo.com,foxbusiness.com,business.nikkeibp.co.jp,online.wsj.com,finance.yahoo.com,mint.com,moneynews.com,zerohedge.com
 tresshold=8
