--- a/backend/properties/badges/wiki/wiki.properties
+++ b/backend/properties/badges/wiki/wiki.properties
@@ -1,3 +1,3 @@
 [wiki]
-domains=en.wikipedia.org
+domains=en.wikipedia.org,ebookstore.sony.com,booksinc.net,alibris.com,audible.com,bookswim.com,candlewick.com,eu.wiley.com
 tresshold=8
