--- a/backend/properties/general.ini
+++ b/backend/properties/general.ini
@@ -1,11 +1,12 @@
 [app]
 domain=http://www.instaright.com
 [facebook]
-key=180962951948062
-secret=9ae7202531b3b813baf1bca1fcea6178
+key=
+secret=
 [social]
 fb_factor=5
 tw_factor=3
-tw_margin=1050
+tw_margin=1250
 klout_correction=30
-klout_api_key=z9kqxgrwa5te3yuheaevyhxn
+klout_api_key=
+alchemy_api_key=
