--- a/backend/properties/general.ini
+++ b/backend/properties/general.ini
@@ -1,12 +1,12 @@
 [app]
 domain=http://www.instaright.com
 [facebook]
-key=
-secret=
+key=180962951948062
+secret=9ae7202531b3b813baf1bca1fcea6178
 [social]
 fb_factor=5
 tw_factor=3
-tw_margin=1250
+tw_margin=1550
 klout_correction=30
-klout_api_key=
-alchemy_api_key=
+klout_api_key=z9kqxgrwa5te3yuheaevyhxn
+alchemy_api_key=a7fd03c8438a5d02423cf07b58f3e5565b08861e
