--- a/backend/index.yaml
+++ b/backend/index.yaml
@@ -157,6 +157,13 @@ indexes:
   - name: active
   - name: last_updatetime
 
+- kind: UserSessionFE
+  properties:
+  - name: last_updatetime
+    direction: desc
+  - name: user
+    direction: desc
+
 - kind: UserStats
   properties:
   - name: date
@@ -180,4 +187,14 @@ indexes:
   - name: date
     direction: desc
   - name: count
+    direction: desc
+- kind: UserSessionFE
+  properties:
+  - name: active
+  - name: path
+  - name: last_updatetime
+- kind: LinkCategory
+  properties:
+  - name: category
+  - name: updated
     direction: desc
