css for categories + bug fixes

--- a/backend/index.yaml
+++ b/backend/index.yaml
@@ -153,6 +153,12 @@ indexes:
   - name: date
     direction: desc
 
+- kind: SessionModel
+  properties:
+  - name: client
+  - name: date
+    direction: desc
+
 - kind: StatsModel
   properties:
   - name: __key__
