--- a/backend/cron.yaml
+++ b/backend/cron.yaml
@@ -31,7 +31,7 @@ cron:
   url: /short_link_consolidation_task
   schedule: every day 01:40
 
-- description: hotlink tweets to queue
-  url: /util/twitter/twit
-  schedule: every monday 08:00
+#- description: hotlink tweets to queue
+#  url: /util/twitter/twit
+#  schedule: every monday 08:00
 
