--- a/backend/properties/badges/gadget/gadget.properties
+++ b/backend/properties/badges/gadget/gadget.properties
@@ -1,3 +1,3 @@
 [gadget]
-domains=lifehacker.com,gizmodo.com,engadget.com,howtogeek.com,macsurfer.com,43folders.com,lifehack.org,lifehacker.com.au,productivity501.com,bestbuy.com,newegg.com
+domains=lifehacker.com,gizmodo.com,engadget.com,howtogeek.com,macsurfer.com,43folders.com,lifehack.org,lifehacker.com.au,productivity501.com,bestbuy.com,newegg.com,gigaom.com,techcrunch.com,mashable.com,dailywtf.com,reddit.com,digg.com,stackoverflow.com
 tresshold=6
