--- a/backend/properties/badges/news/news.properties
+++ b/backend/properties/badges/news/news.properties
@@ -1,3 +1,3 @@
 [news]
-domains=news.google.com,yahoo.news.com,guardian.co.uk,reuters.com,spiegel.de,time.com,online.wsj.com,cnn.com,abcnews.go.com,msnbc.msn.com,lemonde.fr,dw-world.de,npr.org,independent.co.uk,thedailybeast.com,welt.de,focus.de
+domains=news.google.com,yahoo.news.com,guardian.co.uk,reuters.com,spiegel.de,time.com,online.wsj.com,cnn.com,abcnews.go.com,msnbc.msn.com,lemonde.fr,dw-world.de,npr.org,independent.co.uk,thedailybeast.com,welt.de,focus.de,theatlantic.com,sueddeutsche.de
 tresshold=6
