--- a/backend/properties/badges/ny/ny.properties
+++ b/backend/properties/badges/ny/ny.properties
@@ -1,3 +1,3 @@
 [ny]
-domains=nytimes.com,newyorker.com,nymag.com,nybooks.com,archives.newyorker.com,nypost.com
+domains=nytimes.com,newyorker.com,nymag.com,nybooks.com,archives.newyorker.com,nypost.com,bits.blogs.nytimes.com
 tresshold=8
