--- a/backend/queue.yaml
+++ b/backend/queue.yaml
@@ -48,3 +48,8 @@ queue:
 - name: category-stream-queue
   rate: 50/s
   bucket_size: 10
+- name: score-queue
+  rate: 50/s
+- name: link-rcmd-queue
+  rate: 50/s 
+  bucket_size: 10
