--- a/backend/properties/general.ini
+++ b/backend/properties/general.ini
@@ -6,13 +6,13 @@ secret=9ae7202531b3b813baf1bca1fcea6178
 [social]
 fb_factor=5
 tw_factor=3
-tw_margin=2550
+tw_margin=1050
 klout_correction=30
 klout_api_key=z9kqxgrwa5te3yuheaevyhxn
 alchemy_api_key=a7fd03c8438a5d02423cf07b58f3e5565b08861e
 [zemanta]
 key=w9f7aq2eimzoohkfnxi7nnnu
 [protocols]
-skip=file,chrome,about,ed2k,liberator,irc,chrome-extension,rockmelt,magnet,resource
+skip=file,chrome,about,ed2k,liberator,irc,chrome-extension,rockmelt,magnet,resource,dragon
 [twit]
 skip_domain=twitter.com,google.com,instapaper.com,facebook.com,maps.google.com,en.wikipedia.org,yahoo.co.jp,lifehacker.com,wikipedia.org,yahoo.com,doubleclick.net,instaright.com,mail.google.com,google.de,google.fr,rackspace.com,bit.ly
