--- a/backend/properties/general.ini
+++ b/backend/properties/general.ini
@@ -10,9 +10,11 @@ tw_margin=1050
 klout_correction=30
 klout_api_key=z9kqxgrwa5te3yuheaevyhxn
 alchemy_api_key=a7fd03c8438a5d02423cf07b58f3e5565b08861e
+[embedly]
+key=36e78584b17611e0a7394040d3dc5c07
 [zemanta]
 key=w9f7aq2eimzoohkfnxi7nnnu
 [protocols]
-skip=file,chrome,about,ed2k,liberator,irc,chrome-extension,rockmelt,magnet,resource,dragon
+skip=file,chrome,about,ed2k,liberator,irc,chrome-extension,rockmelt,magnet,resource,dragon,fs2you
 [twit]
 skip_domain=twitter.com,google.com,instapaper.com,facebook.com,maps.google.com,en.wikipedia.org,yahoo.co.jp,lifehacker.com,wikipedia.org,yahoo.com,doubleclick.net,instaright.com,mail.google.com,google.de,google.fr,rackspace.com,bit.ly
