--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -6,6 +6,10 @@ builtins:
 - remote_api: on
 
 handlers:
+- url: /mapreduce(/.*)?
+  script: mapreduce/main.py
+  login: admin
+
 - url: /cron
   script: cron.py
   login: admin
