category view,domain view unificated view

--- a/backend/properties/general.ini
+++ b/backend/properties/general.ini
@@ -18,6 +18,6 @@ key__=9757118cc13911e090f54040d3dc5c07
 [zemanta]
 key=w9f7aq2eimzoohkfnxi7nnnu
 [protocols]
-skip=file,chrome,about,ed2k,liberator,irc,chrome-extension,rockmelt,magnet,resource,dragon,fs2you
+skip=file,chrome,about,ed2k,liberator,irc,chrome-extension,rockmelt,magnet,resource,dragon,fs2you,thunder
 [twit]
 skip_domain=twitter.com,google.com,instapaper.com,facebook.com,maps.google.com,en.wikipedia.org,yahoo.co.jp,lifehacker.com,wikipedia.org,yahoo.com,doubleclick.net,instaright.com,mail.google.com,google.de,google.fr,rackspace.com,bit.ly
