--- a/backend/properties/general.ini
+++ b/backend/properties/general.ini
@@ -19,6 +19,9 @@ key_5=36e78584b17611e0a7394040d3dc5c07
 [zemanta]
 key=w9f7aq2eimzoohkfnxi7nnnu
 [protocols]
-skip=file,chrome,about,ed2k,liberator,irc,chrome-extension,rockmelt,magnet,resource,dragon,fs2you,thunder
+skip=file,chrome,about,ed2k,liberator,irc,chrome-extension,rockmelt,magnet,resource,dragon,fs2you,thunder,dactyl,zotero,bar
 [twit]
 skip_domain=twitter.com,google.com,instapaper.com,facebook.com,maps.google.com,en.wikipedia.org,yahoo.co.jp,lifehacker.com,wikipedia.org,yahoo.com,doubleclick.net,instaright.com,mail.google.com,google.de,google.fr,rackspace.com,bit.ly
+[flickr]
+key=3cf3ac115819762cc381b9a62d4a79ac
+secret=d9249d1ffa11fae0
