--- a/backend/properties/general.ini
+++ b/backend/properties/general.ini
@@ -24,6 +24,8 @@ skip=file,chrome,about,ed2k,liberator,irc,chrome-extension,rockmelt,magnet,resou
 skip_domain=twitter.com,google.com,instapaper.com,facebook.com,maps.google.com,en.wikipedia.org,yahoo.co.jp,lifehacker.com,wikipedia.org,yahoo.com,doubleclick.net,instaright.com,mail.google.com,google.de,google.fr,rackspace.com,bit.ly
 consumer_key=z3Yh5b0DoVZqrRfEekLehA
 consumer_secret=1AGbtzFbPfZYmjoasi5VuNpKESZxJiOA51jryY8cjUk
+instaright_consumer_key=WZ9re48FXCmnaNlN4rbuhg
+instaright_consumer_secret=jEQ7gDsE2aR9AXrA6aMZHBvKvvFgurjXoSiYLiyjQ
 access_token_key=193034839-oI43CpQA6Mf1JC2no0mKwGxgT7wyWdDL6HpSKlMz
 access_token_secret=q2CP7JR8wNrMNbqgRs9YezZtdMtZO7OgcgTRjCSY
 [flickr]
