--- a/backend/properties/badges/category2badge.ini
+++ b/backend/properties/badges/category2badge.ini
@@ -1,6 +1,7 @@
 [category]
-gadget=
-economy=
-wiki=
-sports=
-news=
+gadget=gaming,computer,internet,technology
+economy=business
+wiki=science
+sports=sports
+news=news
+
