--- a/backend/properties/users.ini
+++ b/backend/properties/users.ini
@@ -1,5 +1,4 @@
-[notification]
-skip_notification=
 [dashboard]
-#number of links showed in listing 
-show_links=10
+show_links=50
+[notification]
+skip_notification=gbabun,bojanbabic,instaright,Bojan Babic
